<resources>
    <string name="app_name">App</string>
    <string name="task_list">Tasks List</string>
    <string name="task_edit">Task Edit</string>
    <string name="action_settings">Settings</string>
    <string name="titleLabel">Title</string>
    <string name="descriptionLabel">Description</string>
    <string name="deadlineLabel">Deadline</string>
    <string name="statusLabel">Status</string>
    <string-array name="status_array">
        <item>To Do</item>
        <item>In Progress</item>
        <item>Done</item>
    </string-array>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must not be null</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
</resources>
