<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/task_list_fragment">

    <fragment
        android:id="@+id/task_list_fragment"
        android:name="app.app.task.tasks.TaskListFragment"
        android:label="@string/task_list"
        tools:layout="@layout/task_list_fragment" />

    <fragment
        android:id="@+id/login_fragment"
        android:name="app.app.auth.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/login_fragment" />

    <fragment
        android:id="@+id/task_edit_fragment"
        android:name="app.app.task.task.TaskEditFragment"
        android:label="@string/task_edit"
        tools:layout="@layout/task_edit_fragment" />
</navigation>